--- a/esstoolkit/pb_tool.cfg
+++ b/esstoolkit/pb_tool.cfg
@@ -42,7 +42,7 @@ name: esstoolkit-dev
 
 [files]
 # Python files that should be deployed with the plugin
-python_files: __init__.py utility_functions.py EssToolkit.py ProjectManager.py SettingsManager.py
+python_files: __init__.py utility_functions.py EssToolkit.py ProjectManager.py SettingsManager.py resources_rc.py
 
 # The main dialog file that is loaded (not compiled)
 main_dialog:
