compiled dialogs updates

--- a/esstoolkit/pb_tool.cfg
+++ b/esstoolkit/pb_tool.cfg
@@ -48,7 +48,7 @@ python_files: __init__.py utility_functions.py EssToolkit.py ProjectManager.py S
 main_dialog:
 
 # Other ui files for dialogs you create (these will be compiled)
-compiled_ui_files: ui_About.ui ui_Project.ui ui_Settings.ui analysis/ui_Analysis.ui analysis/ui_DepthmapAdvanced.ui analysis/ui_VerificationSettings.ui explorer/ui_Explorer.ui gate_transformer/network_transformer_dialog_base.ui
+compiled_ui_files: ui_About.ui ui_Project.ui ui_Settings.ui analysis/ui_Analysis.ui analysis/ui_DepthmapAdvanced.ui analysis/ui_VerificationSettings.ui explorer/ui_Explorer.ui
 
 # Resource file(s) that will be compiled
 resource_files: resources.qrc
