--- a/esstoolkit/pb_tool.cfg
+++ b/esstoolkit/pb_tool.cfg
@@ -58,7 +58,7 @@ extras: metadata.txt LICENSE.txt
 
 # Other directories to be deployed with the plugin.
 # These must be subdirectories under the plugin directory
-extra_dirs: external icons analysis explorer gate_transformer rcl_cleaner catchment_analyser
+extra_dirs: external icons styles analysis explorer gate_transformer rcl_cleaner catchment_analyser urban_data_input
 
 # ISO code(s) for any locales (translations), separated by spaces.
 # Corresponding .ts files must exist in the i18n directory
