--- a/esstoolkit/pb_tool.cfg
+++ b/esstoolkit/pb_tool.cfg
@@ -38,7 +38,7 @@
 [plugin]
 # Name of the plugin. This is the name of the directory that will
 # be created in .qgis2/python/plugins
-name: esstoolkit
+name: esstoolkit-dev
 
 [files]
 # Python files that should be deployed with the plugin
